implémentation html css index

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="container">
             <div class="menu">
-                <div><a href="index.html">Oripeluche</a></div>
+                <div><a href="index.html">Oriteddies</a></div>
                 <nav>
                     <a href="panier.html">
                         <div class="shop">
