--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./styles/index.css">
     <title>Orinoco</title>
 </head>
 
@@ -31,15 +31,15 @@
             </div>
         </div>
     </header>
-    <div class="container">
-        <section class="hero">
-            <h1>Ours en peluche faits à la main</h1>
-        </section>
-    </div>
     <main>
         <div class="container">
+            <section class="hero">
+                <img src="./images/b2e5f615.jpg" alt="nounours">
+                <h1>Ours en peluche faits à la main</h1>
+            </section>
             <section class="produits">
                 <h2>Nos produits</h2>
+                <div class="cards"></div>
             </section>
         </div>
     </main>
@@ -52,7 +52,7 @@
             </ul>
         </div>
     </footer>
-    <script src="index.js"></script>
+    <script src="/scripts/index.js"></script>
 
 </body>
 
