--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="styles/index.css">
     <title>Orinoco</title>
 </head>
 
@@ -33,13 +33,8 @@
     </header>
     <main>
         <div class="container">
-            <section class="hero">
-                <img src="./images/b2e5f615.jpg" alt="nounours">
-                <h1>Ours en peluche faits à la main</h1>
-            </section>
-            <section class="produits">
-                <h2>Nos produits</h2>
-                <div id="productList" class="cards"></div>
+            <section class="">
+                
             </section>
         </div>
     </main>
@@ -52,7 +47,7 @@
             </ul>
         </div>
     </footer>
-    <script src="./scripts/index.js"></script>
+    <script src="confirmation.js"></script>
 
 </body>
 
