--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="styles/index.css">
     <title>Orinoco</title>
 </head>
 
@@ -19,7 +19,7 @@
     <header>
         <div class="container">
             <div class="menu">
-                <div><a href="index.html">Oripeluche</a></div>
+                <div><a href="index.html">Oriteddies</a></div>
                 <nav>
                     <a href="panier.html">
                         <div class="shop">
@@ -33,8 +33,8 @@
     </header>
     <main>
         <div class="container">
-            <section class="">
-                <h2></h2>
+            <section class="produit">
+                <div id="product" class="cards"></div>
             </section>
         </div>
     </main>
@@ -47,7 +47,7 @@
             </ul>
         </div>
     </footer>
-    <script src="index.js"></script>
+    <script src="./scripts/produit.js"></script>
 
 </body>
 
